--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,16 +1,20 @@
-<!--Diego Section-->
-html {
-    font-size: 3vmax;
+<!--Diego Section-- > html {
+  font-size: 3vmax;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 1.2;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.2;
 }
 
-h1, h2, h3, h4, h5 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
-
-<!--Stefan Section-->
+<!--Stefan Section-- > .nav-link {
+  color: green;
+}
