fixed stylesheet order

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,4 @@ h5 {
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 
-<!--Stefan Section-- > .nav-link {
-  color: green;
-}
+<!--Stefan Section-->
