--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
-<!--Diego Section-- > html {
+/* Diego Section */
+html {
   font-size: 3vmax;
 }
 
@@ -15,4 +16,4 @@ h5 {
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 
-<!--Stefan Section-->
+/* Stefan Sections */
