--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,11 @@ h5 {
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 
+h1 {
+  text-align: center;
+  margin-bottom: 6rem;
+}
+
 /* Stefan Sections */
 .logo {
   width: 3rem;
@@ -42,16 +47,39 @@ main {
   width: 80%;
   margin: auto;
 }
+
+a {
+  color: inherit;
+}
+
 a:hover {
   text-decoration: none;
 }
-.row {
-  text-align: center;
-}
+
 .recipe-container {
-  max-width: 500px;
+  /*max-width: 30%;*/
+  padding-bottom: 5%;
+}
+
+.img-container {
+  width: 90%;
+  height: 20vw;
+  margin: auto;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .row img {
-  width: 90%;
-  height: auto;
+  flex-shrink: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.grid {
+  text-align: center;
+}
+
+.row {
+  justify-content: space-between;
 }
