--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,6 +108,8 @@ a:hover {
   -webkit-box-shadow: 7px 7px 5px 0px rgba(139, 195, 74, 1);
   -moz-box-shadow: 7px 7px 5px 0px rgba(139, 195, 74, 1);
   box-shadow: 7px 7px 5px 0px rgba(139, 195, 74, 1);
+  transform: scale(1.05);
+  transition: 1s;
 }
 
 .row img {
