--- a/styles/recipe.css
+++ b/styles/recipe.css
@@ -1,21 +1,22 @@
+/*Picture of the Recipe*/
 #pic{
 border-radius: 20px;
 box-shadow: 10px 10px rgba(0, 0, 0, 0.404);}
-
+/*Header Text*/
 #head{margin-bottom: 3em;
 margin-top:2em;
 border-bottom: solid 2px rgba(0, 0, 0, 0.301);
 border-style: double;
 border-radius: 5px;
 padding:5px;}
-
+/*Ingredients*/
 .bordered{border: solid 1px;
 padding:10px;
 background-color: rgba(0, 0, 0, 0.034);
 border-radius: 10px;
 padding-left:10%;
 box-shadow: 10px 10px rgba(0, 0, 0, 0.404);}
-
+/*Methods*/
 .method{padding:10px;
     padding-left:10%;
     
